--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: "Tajawal", sans-serif;
 }
 
 a {
@@ -18,4 +18,75 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+/* landing page*/
+#landing-page {
+  background-image: url("https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-bottom: 10px;
+}
+
+/* main container */
+#main-container-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+/* map navbar */
+#map-navbar {
+  padding: 15px;
+  background-color: rgb(226, 224, 224);
+  margin-bottom: 10px;
+}
+/*map view*/
+#map-view {
+  width: 60vw;
+
+  margin-right: 10px;
+  background-color: rgb(226, 224, 224);
+}
+/*list view*/
+#list-view {
+  width: 40vw;
+  background-color: rgb(226, 224, 224);
+}
+#single-post {
+  display: flex;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  background-color: white;
+  align-items: flex-start;
+}
+
+#post-details {
+  margin: 10px;
+}
+
+#post-image {
+  display: flex;
+}
+#post-image img {
+  width: 140px;
+}
+
+button {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  border-radius: 20px/20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  cursor: pointer;
+  background: black;
+}
+
+button:hover {
+  box-shadow: none;
 }
