--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,20 @@ form div {
   display: inline-block;
 }
 
+/* ATTEMP AT FIGURING OUT SNAP SCROLL */
+#home-container {
+  scroll-snap-type: y proximity;
+  scroll-padding-top: 15vh;
+  overflow-y: scroll;
+}
+
+section {
+  border-bottom: 1px solid white;
+  padding: 1rem;
+  height: 100vh;
+  scroll-snap-align: start;
+}
+
 /* landing page*/
 #landing-page {
   background-image: url("https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
@@ -45,10 +59,20 @@ form div {
   background-color: rgb(226, 224, 224);
   margin-bottom: 10px;
 }
+
+#map-navbar select {
+  background-color: white;
+  color: rgb(112, 112, 112);
+  padding: 12px;
+  width: 250px;
+  border: none;
+  font-size: 15px;
+  box-shadow: 0 5px 8px rgb(197, 196, 196);
+}
+
 /*map view*/
 #map-view {
   width: 60vw;
-
   margin-right: 10px;
   background-color: rgb(226, 224, 224);
 }
