--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,13 @@
 body {
-  font-family: "Tajawal", sans-serif;
+  font-family: 'Tajawal', sans-serif;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -36,7 +44,7 @@ section {
 
 /* landing page*/
 #landing-page {
-  background-image: url("https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
+  background-image: url('https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -113,4 +121,35 @@ button {
 
 button:hover {
   box-shadow: none;
+}
+
+/* Chat Styles */
+#chat {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+/* Chat Panel */
+#chat-panel {
+  flex: 0 0 240px;
+}
+
+/* Chat Room */
+#chat-room {
+  flex: 1 1 100%;
+  background-color: hotpink;
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+}
+
+#chat-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+#message-container {
+  flex: 1 1 100%;
+  background-color: indigo;
 }
