--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ form div {
 }
 
 /* ATTEMP AT FIGURING OUT SNAP SCROLL */
-#home-container {
+/* #home-container {
   scroll-snap-type: y proximity;
   scroll-padding-top: 15vh;
   overflow-y: scroll;
@@ -32,7 +32,7 @@ section {
   padding: 1rem;
   height: 100vh;
   scroll-snap-align: start;
-}
+} */
 
 /* landing page*/
 #landing-page {
@@ -75,6 +75,10 @@ section {
   width: 60vw;
   margin-right: 10px;
   background-color: rgb(226, 224, 224);
+}
+.leaflet-container {
+  width: 100%;
+  height: 80vh;
 }
 /*list view*/
 #list-view {
