--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,8 @@ body {
 #app {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -144,7 +146,6 @@ button:hover {
 /* Chat Room */
 #chat-room {
   flex: 1 1 100%;
-  background-color: hotpink;
   display: flex;
   flex-direction: column;
   align-content: stretch;
@@ -156,6 +157,43 @@ button:hover {
 }
 
 #message-container {
-  flex: 1 1 100%;
-  background-color: indigo;
+  flex: 0 1 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  overflow: scroll;
+  padding-bottom: 1rem;
+  gap: 5px;
+}
+
+/* Messages */
+.msg-box {
+  padding: 0 0.5rem;
+  max-width: 55%;
+}
+
+.msg-box.sent {
+  align-self: flex-end;
+  justify-content: right;
+  text-align: right;
+}
+
+.msg-box.received {
+  align-self: flex-start;
+  justify-content: left;
+  text-align: left;
+}
+
+.message {
+  padding: 0.25rem 1rem;
+  border-radius: 5px;
+}
+
+.message.sent {
+  background-color: #ffe4fa;
+  justify-self: right;
+}
+
+.message.received {
+  background-color: #e1dabd;
+  justify-self: left;
 }
