feat: bad styling to differentiate closed chats and disabled send button

--- a/public/style.css
+++ b/public/style.css
@@ -143,6 +143,10 @@ button:hover {
   flex: 0 0 240px;
 }
 
+.chat-card.closed {
+  background-color: lightgray;
+}
+
 /* Chat Room */
 #chat-room {
   flex: 1 1 100%;
