--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Tajawal', sans-serif;
+  font-family: "Tajawal", sans-serif;
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -37,7 +37,7 @@ nav a {
   display: inline-block;
   margin: 1em;
   color: navy;
-  font-family: 'DM Serif Display', serif;
+  font-family: "DM Serif Display", serif;
 }
 
 nav a:hover {
@@ -46,7 +46,7 @@ nav a:hover {
 
 /* landing page*/
 #landing-page {
-  background-image: url('https://images.unsplash.com/photo-1561312929-94cb37efc12e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80');
+  background-image: url("https://images.unsplash.com/photo-1561312929-94cb37efc12e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80");
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -112,12 +112,12 @@ nav a:hover {
 }
 
 #post-details h1 {
-  font-family: 'DM Serif Display', serif;
+  font-family: "DM Serif Display", serif;
   font-size: 15px;
 }
 
 #post-details p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 13px;
 }
 #post-image img {
@@ -171,6 +171,13 @@ nav a:hover {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+.form-instructions {
+  font-size: 13px;
+  text-align: left;
+  padding-top: 0px;
+  margin: 0px;
 }
 
 .submit {
