--- a/public/style.css
+++ b/public/style.css
@@ -101,11 +101,26 @@ nav ul ul li:hover {
 }
 
 #landing-page h1 {
-  font-size: 100px;
+  font-size: 80px;
 }
 
 /* footer */
+#footer {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+}
 
+.developer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.developer img {
+  width: 100px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
 /* main container */
 #main-container-bottom {
   display: flex;
@@ -447,6 +462,21 @@ nav ul ul li:hover {
   box-shadow: none;
 }
 
+.delete {
+  background-color: dodgerblue;
+  border: none;
+  margin: 2px;
+  color: white;
+  border-radius: 5px;
+  padding: 7px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 30px;
+}
+
+.delete:hover {
+  box-shadow: none;
+}
+
 /* MY ACCOUNT */
 /* my posts */
 #my-posts {
@@ -457,16 +487,18 @@ nav ul ul li:hover {
 }
 
 #my-post {
+  display: flex;
+  justify-content: space-between;
   padding: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 10px;
   border-radius: 8px;
   flex-basis: 33%;
+  font-size: 22px;
 }
 
 #my-post div {
   display: flex;
-  justify-content: flex-end;
 }
 
 /*tool tips*/
