--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@ form div {
 }
 
 nav {
-  background-color: #1c5285;
+  background-color: #103a33;
   display: flex;
   justify-content: space-between;
   padding: 0 10px 0 10px;
@@ -46,14 +46,14 @@ nav ul {
 }
 
 nav ul li {
-  background-color: #1c5285;
+  background-color: #103a33;
   position: relative;
   list-style: none;
   display: inline-block;
 }
 
 nav ul li:hover {
-  background-color: #315e88;
+  background-color: #1f5048;
 }
 
 nav ul li a {
@@ -83,12 +83,12 @@ nav ul ul li {
 }
 
 nav ul ul li:hover {
-  background-color: #315e88;
+  background-color: #1f5048;
 }
 
 /* landing page*/
 #landing-page {
-  background-image: url("https://images.unsplash.com/photo-1561312929-94cb37efc12e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80");
+  background-image: url("nycBrownstones.jpg");
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -96,12 +96,13 @@ nav ul ul li:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
   margin-bottom: 10px;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 #landing-page h1 {
   font-size: 80px;
+  color: white;
 }
 
 /* footer */
@@ -123,6 +124,7 @@ nav ul ul li:hover {
 }
 /* main container */
 #main-container-bottom {
+  background-color: #dbebd5;
   display: flex;
   justify-content: space-between;
 }
@@ -135,7 +137,7 @@ nav ul ul li:hover {
 /* map navbar */
 #map-navbar {
   padding: 15px;
-  background-color: lightgray;
+  background-color: #8db580;
   display: flex;
   justify-content: space-between;
 }
@@ -147,6 +149,7 @@ nav ul ul li:hover {
   width: 250px;
   border: none;
   font-size: 15px;
+  border-radius: 5px;
 }
 
 #map-navbar img {
@@ -155,20 +158,21 @@ nav ul ul li:hover {
 
 /*map view*/
 #map-view {
-  width: 60vw;
-  margin: 10px 0 10px 0;
+  width: 50vw;
+  margin: 10px 0 10px 10px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .leaflet-container {
   width: 100%;
   height: 80vh;
+  border-radius: 10px;
 }
 /*list view*/
 #list-view {
-  margin: 10px;
+  /* margin: 10px; */
   height: 80vh;
-  width: 40vw;
+  width: 50vw;
   overflow: scroll;
 }
 
@@ -183,6 +187,7 @@ nav ul ul li:hover {
 
 #post-details {
   margin: 15px;
+  width: 60vw;
 }
 
 #post-details h1 {
@@ -194,8 +199,23 @@ nav ul ul li:hover {
   font-family: "Poppins", sans-serif;
   font-size: 13px;
 }
+
+#post-image {
+  background-color: black;
+  width: 300px;
+  height: 120px;
+  overflow: hidden;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
 #post-image img {
-  width: 140px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
 #no-posts {
@@ -212,6 +232,7 @@ nav ul ul li:hover {
 .form-container {
   text-align: center;
   padding: 10px;
+  background-color: #dbebd5;
 }
 
 .form-container form {
@@ -222,6 +243,8 @@ nav ul ul li:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   align-self: center;
   padding: 15px;
+  background-color: white;
+  border-radius: 5px;
 }
 
 .form-container label {
@@ -495,6 +518,7 @@ nav ul ul li:hover {
   border-radius: 8px;
   flex-basis: 33%;
   font-size: 22px;
+  background-color: white;
 }
 
 #my-post div {
@@ -508,15 +532,14 @@ nav ul ul li:hover {
 .tooltip-wrap .tooltip-content {
   display: none;
   position: absolute;
-  /* bottom: 5%;
-  left: 5%; */
   right: 5%;
   width: 200px;
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 5px;
+  padding: 2px;
   text-align: center;
   font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
 }
 .tooltip-wrap:hover .tooltip-content {
   display: block;
