feat: separate loading page component

--- a/public/style.css
+++ b/public/style.css
@@ -564,6 +564,40 @@ nav ul ul li:hover {
   display: flex;
 }
 
+/* loading page */
+
+#loading-page {
+  font-size: 80px;
+  text-align: center;
+  color: green;
+}
+@keyframes blink {
+  0% {
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
+}
+
+.saving span {
+  animation-name: blink;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
+.saving span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.saving span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
 /*tool tips*/
 .tooltip-wrap {
   position: relative;
