--- a/public/style.css
+++ b/public/style.css
@@ -88,39 +88,55 @@ nav ul ul li:hover {
 
 /* landing page*/
 #landing-page {
-  background-image: url("nycBrownstones.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("nycBrownstones.jpg");
   background-size: cover;
   width: 100vw;
   height: 100vh;
   background-repeat: no-repeat;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 #landing-page h1 {
   font-size: 80px;
-  color: white;
+}
+
+#landing-page p {
+  font-size: 25px;
+  margin: 10px;
 }
 
 /* footer */
 #footer {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
   padding: 10px;
+  background-color: #103a33;
+  color: white;
+  font-size: 20px;
+}
+
+.developers {
+  display: flex;
 }
 
 .developer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 30px;
 }
 .developer img {
-  width: 100px;
+  width: 150px;
   border-radius: 50%;
-  border: 1px solid black;
+  background-color: white;
 }
 /* main container */
 #main-container-bottom {
