--- a/public/style.css
+++ b/public/style.css
@@ -97,10 +97,24 @@ nav ul ul li:hover {
   background-color: #1f5048;
 }
 
+/*// HOMEPAGE //*/
+#home-container {
+  background-color: white;
+}
+
+#app-description {
+  background-color: white;
+  /* background-color: #c47f6f; */
+  padding: 80px 30px 80px 30px;
+  margin-top: 50px;
+  /* color: white; */
+  font-size: 22px;
+  display: flex;
+}
+
 /* landing page*/
 #landing-page {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('nycBrownstones.jpg');
+  background-image: url("nycBrownstones.jpg");
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -116,11 +130,7 @@ nav ul ul li:hover {
 
 #landing-page h1 {
   font-size: 80px;
-}
-
-#landing-page p {
-  font-size: 25px;
-  margin: 10px;
+  margin-bottom: 200px;
 }
 
 /* footer */
@@ -129,8 +139,7 @@ nav ul ul li:hover {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  background-color: #103a33;
-  color: white;
+  background-color: #eca595;
   font-size: 20px;
 }
 
@@ -180,8 +189,8 @@ nav ul ul li:hover {
   border-radius: 5px;
 }
 
-#map-navbar img {
-  width: 50px;
+#map-navbar i {
+  font-size: 40px;
 }
 
 /*map view*/
@@ -679,7 +688,7 @@ summary {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2px;
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 14px;
 }
 .tooltip-wrap:hover .tooltip-content {
