--- a/public/style.css
+++ b/public/style.css
@@ -100,7 +100,7 @@ nav ul ul li:hover {
 /* landing page*/
 #landing-page {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('nycBrownstones.jpg');
+    url("nycBrownstones.jpg");
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -265,6 +265,7 @@ nav ul ul li:hover {
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 1000;
 }
 .overlay:target {
   visibility: visible;
@@ -272,12 +273,12 @@ nav ul ul li:hover {
 }
 
 .popup {
-  right: 25px;
+  right: 33%;
   margin-top: 25px;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
-  width: 30%;
+  width: 33%;
   position: absolute;
   transition: all 5s ease-in-out;
 }
@@ -294,7 +295,6 @@ nav ul ul li:hover {
   font-size: 40px;
 }
 
-/* create post */
 /* create post && sign Up*/
 .form-container {
   text-align: center;
@@ -671,7 +671,7 @@ summary {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2px;
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 14px;
 }
 .tooltip-wrap:hover .tooltip-content {
