--- a/public/style.css
+++ b/public/style.css
@@ -207,7 +207,9 @@ nav ul ul li:hover {
 #single-post {
   display: flex;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 10px;
+  margin: 5px;
+  padding-left: 5px;
+  padding-top: 5px;
   background-color: white;
   align-items: flex-start;
   border-radius: 8px;
@@ -230,18 +232,23 @@ nav ul ul li:hover {
 
 #post-image {
   width: 300px;
-  height: 120px;
+  height: 125px;
   overflow: hidden;
   border-radius: 5px 0 0 5px;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  align-items: flex-start;
+}
+
+.selected #post-image {
+  width: 300px;
+  height: auto;
 }
 
 #post-image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 5px;
   width: 100%;
 }
 
@@ -275,7 +282,7 @@ nav ul ul li:hover {
 .popup {
   right: 33%;
   margin-top: 25px;
-  padding: 20px;
+  padding: 5px;
   background: #fff;
   border-radius: 5px;
   width: 33%;
@@ -293,6 +300,15 @@ nav ul ul li:hover {
 }
 .popup .close:hover {
   font-size: 40px;
+}
+
+.image-slide {
+  display: flex;
+  align-items: center;
+}
+
+.image-slide span {
+  align-self: center;
 }
 
 /* create post && sign Up*/
