style: post form

--- a/public/style.css
+++ b/public/style.css
@@ -308,11 +308,11 @@ nav ul ul li:hover {
 .form-container {
   text-align: center;
   padding: 10px;
-  background-color: #dbebd5;
+  background-color: #8db580;
 }
 
 .form-container form {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -327,17 +327,19 @@ nav ul ul li:hover {
   margin-top: 5px;
   font-size: 18px;
   text-align: left;
+  width: 200px;
 }
 
 .form-container input {
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(255, 255, 255);
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
-  display: inline-block;
+  /* display: inline-block; */
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  float: left;
 }
 
 .form-container input:focus {
@@ -345,8 +347,15 @@ nav ul ul li:hover {
   background-color: white;
 }
 
+input[type="file"] {
+  border: none;
+}
+
+textarea {
+  width: 100%;
+  height: 200px;
+}
 .form-container select {
-  background-color: rgb(231, 231, 231);
   width: 100%;
   padding: 12px 10px;
   margin: 8px 0;
@@ -360,7 +369,7 @@ nav ul ul li:hover {
   color: transparent;
 }
 
-.submit {
+/* .submit {
   font-size: 1em;
   padding: 7px;
   color: #fff;
@@ -376,7 +385,7 @@ nav ul ul li:hover {
 
 .submit:hover {
   box-shadow: none;
-}
+} */
 
 .signup-map {
   height: 35vh;
@@ -388,6 +397,12 @@ nav ul ul li:hover {
 .form-container a {
   color: blue;
   text-decoration: underline;
+}
+
+.photo-preview-div {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 /* Chat Styles */
@@ -606,13 +621,27 @@ summary {
   box-shadow: none;
 }
 
+.submit,
 .preview-button {
-  padding: 5px;
-  background-color: dodgerblue;
-  color: white;
-  border: none;
-  border-radius: 5px;
+  padding: 10px;
+  background-color: white;
+  color: dodgerblue;
+  border: 1px solid black;
+  width: 150px;
+  margin: auto;
 }
+
+.submit:hover,
+.preview-button:hover {
+  color: black;
+}
+
+.delete-photo {
+  border: none;
+  background-color: white;
+  font-size: 20px;
+}
+
 /* MY ACCOUNT */
 /* my posts */
 #my-posts {
