--- a/public/style.css
+++ b/public/style.css
@@ -228,13 +228,27 @@ nav ul ul li:hover {
 }
 
 #post-details h1 {
-  font-family: "DM Serif Display", serif;
-  font-size: 15px;
+  font-size: 20px;
+}
+
+.location-status {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+#post-details h3 {
+  color: dodgerblue;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+#post-details h4 {
+  margin-right: 30px;
 }
 
 #post-details p {
-  font-family: "Poppins", sans-serif;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 #post-image {
@@ -307,7 +321,7 @@ nav ul ul li:hover {
 /* create post && sign Up*/
 .form-container {
   text-align: center;
-  padding: 10px;
+  padding: 20px 10px 80px 10px;
   background-color: #8db580;
 }
 
@@ -606,23 +620,10 @@ summary {
   box-shadow: none;
 }
 
-.delete {
-  background-color: dodgerblue;
-  border: none;
-  margin: 2px;
-  color: white;
-  border-radius: 5px;
-  padding: 7px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 30px;
-}
-
-.delete:hover {
-  box-shadow: none;
-}
-
 .submit,
-.preview-button {
+.preview-button,
+.delete,
+.request-button {
   padding: 10px;
   background-color: white;
   color: dodgerblue;
@@ -631,8 +632,10 @@ summary {
   margin: auto;
 }
 
+.delete:hover,
 .submit:hover,
-.preview-button:hover {
+.preview-button:hover,
+.request-button:hover {
   color: black;
 }
 
