--- a/public/style.css
+++ b/public/style.css
@@ -166,7 +166,7 @@ nav ul ul li:hover {
 /* main container */
 #main-container-bottom {
   /* background-color: #dbebd5; */
-  padding: 10px 75px 0 75px;
+  padding: 10px 50px 0 50px;
   display: flex;
   justify-content: space-between;
 }
@@ -203,7 +203,7 @@ nav ul ul li:hover {
 /*map view*/
 #map-view {
   width: 50vw;
-  margin: 10px 40px 10px 10px;
+  margin-right: 30px;
 }
 
 .leaflet-container {
@@ -331,7 +331,6 @@ nav ul ul li:hover {
   font-size: 40px;
 }
 
-
 /* FORM */
 .image-slide {
   display: flex;
@@ -342,7 +341,6 @@ nav ul ul li:hover {
   align-self: center;
 }
 
-
 /* create post && sign Up*/
 .form-container {
   text-align: center;
@@ -350,7 +348,7 @@ nav ul ul li:hover {
 }
 
 .form-container form {
-  width: 40%;
+  width: 800px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -428,7 +426,7 @@ textarea {
   display: flex;
   width: 100%;
   height: 100%;
-  color: black;
+  background-color: white;
 }
 
 /* Chat Panel */
@@ -469,7 +467,7 @@ textarea {
 .chat-card {
   border-bottom: 1px darkgray solid;
   padding: 10px;
-  background-color: lightgray;
+
   text-decoration: none;
 }
 
@@ -559,23 +557,22 @@ textarea {
 }
 
 .message {
-  padding: 0.25rem 1rem;
-  border-radius: 22px;
+  border-radius: 5px;
+  font-size: 20px;
 }
 
 .message.sent {
-  background-color: lightsteelblue;
   justify-self: right;
 }
 
 .message.received {
-  background-color: rgb(224, 174, 209);
   justify-self: left;
 }
 
 .message.admin {
-  background-color: lightseagreen;
+  background-color: lightgray;
   justify-self: center;
+  font-size: 15px;
 }
 
 /* FAQ */
