--- a/public/style.css
+++ b/public/style.css
@@ -255,11 +255,15 @@ nav ul ul li:hover {
   font-size: 16px;
 }
 
+#post-details a {
+  color: red;
+}
+
 #post-image {
   width: 300px;
   height: 125px;
   overflow: hidden;
-  border-radius: 5px 0 0 0;
+  border-radius: 5px 0 0 5px;
   display: flex;
   align-items: flex-start;
 }
@@ -273,7 +277,6 @@ nav ul ul li:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 5px;
   width: 100%;
 }
 
@@ -283,7 +286,7 @@ nav ul ul li:hover {
   margin-top: 40px;
   padding: 10px;
   width: 60%;
-  font-size: 28px;
+  font-size: 20px;
 }
 
 /* image popup on click */
