FEAT: user can upload user profile photo, it persists in cloud and database

--- a/public/style.css
+++ b/public/style.css
@@ -421,6 +421,10 @@ textarea {
   justify-content: center;
 }
 
+.photo-preview {
+  border-radius: 50%;
+}
+
 /* Chat Styles */
 #chat {
   display: flex;
