FEAT: user can remove current profile photo, selecting a new photo will replace the old photo

--- a/public/style.css
+++ b/public/style.css
@@ -422,7 +422,10 @@ textarea {
 }
 
 .photo-preview {
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
+  background-color: white;
 }
 
 /* Chat Styles */
