fix: preview location button block styling

--- a/public/style.css
+++ b/public/style.css
@@ -716,6 +716,10 @@ summary {
   margin: auto;
 }
 
+.preview-button {
+  display: block;
+}
+
 .delete:hover,
 .submit:hover,
 .preview-button:hover,
