--- a/public/style.css
+++ b/public/style.css
@@ -229,8 +229,8 @@ nav ul ul li:hover {
 }
 
 .leaflet-container {
-  width: 100%;
   height: 80vh;
+  width: 100%;
 }
 
 /*list view*/
@@ -436,9 +436,15 @@ textarea {
 }
 
 .preview-map {
-  height: 28vh;
   width: 28vw;
+  height: 35vh;
 }
+
+/* #map-preview { 
+  height: 100vh;
+  width: 100%;
+} */
+
 
 .form-container a {
   color: blue;
